# OptDash

./: .env.example  .gitignore  README.md  pyproject.toml  run_api.py  run_pipeline.py
Docs/: Part10_API_Layer.md  Part11_Notifications_EOD_Reports.md  Part12_Frontend.md  Part13_Testing_Deployment.md  Part1_Architecture_Overview.md  Part2_Data_Pipeline.md  Part3_Analytics_Engine.md  Part4_AI_Engine.md  Part5_Trade_Lifecycle.md  Part6_Position_Tracking_Alerts.md  Part7_Environment_Gate.md  Part8_Learning_Engine.md  Part9_Journal_Schema_CRUD.md
frontend/: index.html  package.json  tailwind.config.ts  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: ai.ts  client.ts  market.ts  micro.ts  screener.ts
frontend/src/components/: GlobalHeader.tsx
frontend/src/components/panels/: AITradeCard.tsx  AlertsPanel.tsx  CoCPanel.tsx  EnvironmentPanel.tsx  GEXPanel.tsx  LivePositionPanel.tsx  PCRPanel.tsx  StrikeScreener.tsx  VexCexPanel.tsx
frontend/src/hooks/: useAI.ts  useMarket.ts  useMicro.ts  useScreener.ts
frontend/src/pages/: DashboardPage.tsx  JournalPage.tsx  LearningPage.tsx
frontend/src/store/: dashboardStore.ts  positionStore.ts
frontend/src/types/: index.ts
optdash/: __init__.py  config.py  scheduler.py
optdash/ai/: confidence.py  direction.py  eod.py  narrative.py  pre_flight.py  quality.py  recommender.py  shadow_tracker.py  tracker.py
optdash/ai/journal/: __init__.py  schema.py  shadow.py  snaps.py  trades.py
optdash/ai/learning/: __init__.py  report.py  stats.py
optdash/analytics/: alerts.py  coc.py  environment.py  gex.py  iv.py  microstructure.py  pcr.py  pnl.py  query.py  screener.py  vex_cex.py
optdash/api/: app.py  deps.py  validators.py
optdash/api/routers/: ai.py  market.py  micro.py  screener.py  ws.py
optdash/models/: __init__.py  enums.py
optdash/pipeline/: backfill.py  bq_client.py  duckdb_gateway.py  gap_fill.py  incremental.py  ingestion.py  market_calendar.py  processor.py  purge.py  scheduler.py  watermark.py  writer.py
scripts/pipeline/: __init__.py  atm.py  backfill.py  bq_client.py  config.py  duckdb_setup.py  gap_fill.py  logger.py  market_calendar.py  processor.py  run_pipeline.py  scheduler.py  validator.py  watermark.py  writer.py
