[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "optdash"
version = "2.0.0"
description = "Options Analytics & AI Trading Engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "duckdb>=0.10.3",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "apscheduler>=3.10.4",
    "loguru>=0.7.2",
    "pandas>=2.2.2",
    "numpy>=1.26.4",
    "scipy>=1.13.0",
    "py_vollib>=1.0.1",
    "websockets>=12.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "httpx>=0.27.0",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
]

[tool.hatch.build.targets.wheel]
packages = ["optdash"]

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "W"]

[tool.mypy]
python_version = "3.11"
warn_unused_imports = true
ignore_missing_imports = true
