[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "optdash"
version = "2.0.0"
description = "Options Analytics & AI Trading Engine"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    # Upper bound <2.0: DuckDB has breaking SQL/API changes between major versions.
    # Raise only after explicitly validating arg_max, $1 binding, and INTERVAL syntax.
    "duckdb>=0.10.3,<2.0",
    # Upper bounds on packages with known breaking major-version changes in-flight.
    # APScheduler 4.x redesigns AsyncScheduler API entirely (no BlockingScheduler);
    # pandas 3.x removes deprecated .iteritems() and mandates copy-on-write;
    # pydantic 3.x plans v2->v3 validator/model API changes.
    "pydantic>=2.7.0,<3.0",
    "pydantic-settings>=2.2.1,<3.0",
    "apscheduler>=3.10.4,<4.0",
    "loguru>=0.7.2",
    "pandas>=2.2.2,<3.0",
    # pyarrow is imported directly in pipeline/writer.py (pa.Table, pq.write_table).
    # pandas lists it only as an optional extra, so a fresh install without this
    # explicit pin raises ModuleNotFoundError on the first scheduler tick.
    # <20.0 guards against an unvalidated major-version jump.
    "pyarrow>=15.0.0,<20.0",
    "numpy>=1.26.4",
    "scipy>=1.13.0",
    "py_vollib>=1.0.1",
    "websockets>=12.0",
    # python-dotenv removed: it is a transitive dependency of pydantic-settings
    # and does not need to be pinned independently here.
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "httpx>=0.27.0",
    "ruff>=0.4.4",
    "mypy>=1.10.0",
    # Type stubs — mypy checks these properly once the global
    # ignore_missing_imports blanket is removed (see [tool.mypy] below).
    "pandas-stubs",
]

[tool.hatch.build.targets.wheel]
packages = ["optdash"]

[tool.ruff]
line-length    = 100
target-version = "py311"

# Fix-P1-1: ruff >=0.2.0 requires lint rules under [tool.ruff.lint], NOT [tool.ruff].
# Previously, select/ignore placed here were silently ignored — linter was a no-op.
[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]   # line-length already enforced by the setting above

[tool.mypy]
python_version      = "3.11"
warn_unused_imports = true
# Fix-P1-4: removed global ignore_missing_imports=true blanket.
# Packages with no stubs are explicitly listed in the overrides below;
# all other packages (numpy, pandas via pandas-stubs) are type-checked properly.

[[tool.mypy.overrides]]
module = ["duckdb", "py_vollib.*", "apscheduler.*"]
ignore_missing_imports = true
